--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,12 +4,10 @@ build_jobs: &build_jobs
   jobs:
     - build-amd64
     - build-arm64
-    - build-armhf
     - push-manifest:
         requires:
           - build-amd64
           - build-arm64
-          - build-armhf
 
 workflows:
   version: 2
@@ -64,13 +62,6 @@ jobs:
       QEMU_ARCH: aarch64
       TAG: arm64
       TARGET: arm64v8
-  build-armhf:
-    <<: *shared
-    environment:
-      GOARCH: arm
-      QEMU_ARCH: arm
-      TAG: arm
-      TARGET: arm32v6
   push-manifest:
     docker:
       - image: docker:18
@@ -102,12 +93,12 @@ jobs:
             source $BASH_ENV
             echo $DOCKERHUB_PASS | docker login -u $DOCKERHUB_USER --password-stdin;
             manifest-tool push from-args \
-              --platforms linux/amd64,linux/arm,linux/arm64 \
+              --platforms linux/amd64,linux/arm64 \
               --template "$REGISTRY/$IMAGE:$VERSION-ARCH" \
               --target "$REGISTRY/$IMAGE:$VERSION"
             if [ "${CIRCLE_BRANCH}" == 'master' ]; then
               manifest-tool push from-args \
-                --platforms linux/amd64,linux/arm,linux/arm64 \
+                --platforms linux/amd64,linux/arm64 \
                 --template "$REGISTRY/$IMAGE:$VERSION-ARCH" \
                 --target "$REGISTRY/$IMAGE:latest"
             fi
